Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-86582

REG 5.13->5.14: Segfault upon close and then show

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.15.9
    • 5.14.2, 5.15.2
    • None
    • GNU/Debian sid with qt 5 5.14.2+dfsg-6 and also with 5.15.2+dfsg-2
    • Linux/X11, Windows
    • 15b61e00c501f0e70aa70a15131d22b2ea8c80c5 (qt/tqtc-qtbase/tqtc/lts-5.15)

      Under some circunstamces a call to makeCurrent inside a QGLWidget widget segfaults the program

       

      I Think this might be related to bug https://bugreports.qt.io/browse/QTBUG-82374 which was closed as invalid and seems to have left unchecked ( i commented on that bug)

      I attach a very small program that exhibits the problem.

       

      Steps to reproduce with provided example:

      -----------------------

      1.- Open Program

      2.- Click on "show" button

      3.- Close the window that will open

      4.- Click on "show" button again

      5.- Segfault

       

       

        For Gerrit Dashboard: QTBUG-86582
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            ballfire Alejandro Lorenzo
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes